Realizacion Prueba Tecnica

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,24 @@
 <div class="container">
 	<h1>Prueba técnica - Estudio Faser</h1>
 	<h2>Listado de tareas</h2>
-	<ol>
-		<li *ngFor="let tarea of tareas">{{tarea.titulo}} ({{tarea.minutos}} minutos)</li>
-	</ol>
+
+	<button (click)="AgregarTarea()">Agregar Tarea</button>
+	<button (click)="OrdenDescendentePorMinuto()">Orden descendente por minuto</button>
+	<button (click)="OrdenAscendentePorMinuto()">Orden ascendente por minuto</button>
+
+	<table border="1">
+		<tr>
+			<th>Título Tarea</th>
+			<th>Duracion Tarea (min)</th>
+			<th>Opciones</th>
+		</tr>
+		<tr *ngFor="let tarea of tareas" class="filas">
+			<td>{{tarea.titulo}}</td>
+			<td class="time">{{tarea.minutos}}</td>
+			<td>
+				<button (click)="EliminarTareaEspecifica(tarea)">Eliminar</button>
+				<button (click)="DestacarTareaEspecifica(tarea)">Destacar</button>
+			</td>
+		</tr>
+	</table>
 </div>
